<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aliyun.iot.demo.ipcview.activity.EasyPlanSettingsActivity">


    <RelativeLayout
        android:id="@+id/is_all_day_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/is_all_day_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/ipc_plan_all_day"/>

        <CheckBox
            android:id="@+id/is_all_day_cb"
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@id/is_all_day_tv"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <View
        android:id="@+id/rule"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_below="@id/is_all_day_ll"
        android:background="@android:color/darker_gray"  />

    <ListView
        android:id="@+id/time_lst"
        android:layout_below="@id/rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_below="@+id/time_lst"
        android:background="@android:color/darker_gray"  />


    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/plan_unbind_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/ipc_plan_unbind"/>
        <Button
            android:id="@+id/plan_bind_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/ipc_plan_update"/>
    </RelativeLayout>


</RelativeLayout>
